Added demo link

--- a/README
+++ b/README
@@ -5,6 +5,8 @@
      http://digitalnature.eu   
      http://github.com/digitalnature/Form-Dependencies
 
+     Demo: http://dev.digitalnature.eu/jquery/form-dependencies/
+
 
 
    This is an improved jQuery port of the Form Manager script by Twey:
